Moved body styling to index.css+update README.md

--- a/OPENAI_API/client/src/index.css
+++ b/OPENAI_API/client/src/index.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+/* <body style="background-image: url('../public/images/Back1.png');
+background-position: center;
+background-attachment: fixed ;
+cursor: url('./src/assets/icons8-select-cursor-16.png'), auto;
+"> */
+body{
+    background: rgb(8,62,47);
+    background: radial-gradient(circle, rgba(8,62,47,1) 0%, rgba(11,19,41,1) 100%);
+    background-position: center;
+    background-attachment: fixed ;
+      /* cursor: url('./src/assets/icons8-select-cursor-16.png'), auto; */ 
+}
+
+
+  
