--- a/OPENAI_API/client/src/index.css
+++ b/OPENAI_API/client/src/index.css
@@ -3,6 +3,14 @@
 @tailwind utilities;
 
 
+/* @keyframes gradientAnimation {
+  0%, 100% {
+    background-size: 100% 100%;
+  }
+  50% {
+    background-size: 130% 130%;
+  }
+} */
 
 /* <body style="background-image: url('../public/images/Back1.png');
 background-position: center;
@@ -14,6 +22,7 @@ body{
     background: radial-gradient(circle, rgba(8,62,47,1) 0%, rgba(11,19,41,1) 100%);
     background-position: center;
     background-attachment: fixed ;
+/*     animation:gradientAnimation 5s infinite ; */
       /* cursor: url('./src/assets/icons8-select-cursor-16.png'), auto; */ 
 }
 
