--- a/OPENAI_API/client/src/index.css
+++ b/OPENAI_API/client/src/index.css
@@ -2,27 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-
-/* @keyframes gradientAnimation {
+/*
+ @keyframes gradientAnimation {
   0%, 100% {
     background-size: 100% 100%;
   }
   50% {
     background-size: 130% 130%;
   }
-} */
-
+} 
+*/
 /* <body style="background-image: url('../public/images/Back1.png');
 background-position: center;
 background-attachment: fixed ;
 cursor: url('./src/assets/icons8-select-cursor-16.png'), auto;
-"> */
+"> 
+*/
 body{
     background: rgb(8,62,47);
     background: radial-gradient(circle, rgba(8,62,47,1) 0%, rgba(11,19,41,1) 100%);
     background-position: center;
     background-attachment: fixed ;
-/*     animation:gradientAnimation 5s infinite ; */
+   /*  animation:gradientAnimation 3s infinite ; */
       /* cursor: url('./src/assets/icons8-select-cursor-16.png'), auto; */ 
 }
 
